# logflux

./: README.md  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: ci.yml
logflux/: base.py  journald.py  main.py  rsyslog.py
tests/: test_base.py  test_journald.py  test_rsyslog.py
